fix: layout issues

--- a/homeworks/abraham-trenyan/04-css/styles.css
+++ b/homeworks/abraham-trenyan/04-css/styles.css
@@ -2,7 +2,6 @@
   background-color: #e5e5e5;
   font-family: "Poppins";
 }
-
 .button:hover {
   cursor: pointer;
 }
@@ -28,7 +27,6 @@
 }
 .header {
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: center;
   gap: 40px;
@@ -41,13 +39,12 @@
 }
 .header__icons {
   display: flex;
-  flex-direction: row;
   align-items: center;
   list-style: none;
   gap: 26px;
   position: absolute;
-  margin-top: 12px;
   padding-left: 0px;
+  margin-top: 12px;
 }
 .header__info {
   color: #3d3d3d;
@@ -92,32 +89,32 @@
   color: #3a3a3a;
 }
 .main__buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 38px;
 }
-.main__button{
+.main__button {
   width: 290px;
-	height: 80px;
-	cursor: pointer;
+  height: 80px;
+  cursor: pointer;
   border: none;
-	border-radius: 10px;
-  font-family: 'Poppins';
+  border-radius: 10px;
+  font-family: "Poppins";
   font-weight: 500;
   font-size: 22px;
   display: flex;
   justify-content: space-evenly;
-  align-items:center
+  align-items: center;
 }
-.main__button--yellow{
-  background-color: #FBD144;
+.main__button--yellow {
+  background-color: #fbd144;
 }
-.main__button--white{
-  background-color: #FFFFFF;
+.main__button--white {
+  background-color: #ffffff;
 }
-.tabs__buttons-container{
-  background-color: #FFFFFF;
+.tabs__buttons-container {
+  background-color: #ffffff;
   border-radius: 20px;
   height: 110px;
   width: 760px;
@@ -129,35 +126,34 @@
   margin-right: auto;
   margin-bottom: 76px;
 }
-.tab__button{
-  font-family: 'Poppins';
+.tab__button {
+  font-family: "Poppins";
   font-size: 22px;
   font-weight: 500;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border: none;
   border-radius: 10px;
   width: 351.45px;
   height: 80px;
 }
-.tabs__button--grey{
-  background-color: #D7D7D7;
+.tabs__button--grey {
+  background-color: #d7d7d7;
 }
-.projects{
+.projects {
   width: 757px;
   height: 826px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
   align-content: space-around;
 }
-.projects__img{
+.projects__img {
   width: 362px;
   height: 226px;
 }
-.footer{
+.footer {
   display: flex;
   justify-content: center;
   font-size: 22px;
@@ -166,25 +162,25 @@
   margin-bottom: 80px;
 }
 /* Dark mode classes */
-.page--dark{
-  background-color: #0C151D;
+.page--dark {
+  background-color: #0c151d;
 }
-.button--dark{
-  background-color: #171F26;
+.button--dark {
+  background-color: #171f26;
   border: none;
 }
-.button__icon--dark{
-  color: #A3ABB2;
+.button__icon--dark {
+  color: #a3abb2;
 }
-.text--dark{
-  color: #A3ABB2;
+.text--dark {
+  color: #a3abb2;
 }
-.header__heading--dark{
-  color: #F1F2F4;
+.header__heading--dark {
+  color: #f1f2f4;
 }
-.tabs__button--black{
-  background-color: #0C151D;
+.tabs__button--black {
+  background-color: #0c151d;
 }
-.btn-yellow--dark{
-  color: #3D3D3D;
+.btn-yellow--dark {
+  color: #3d3d3d;
 }
